[gd_scene load_steps=34 format=3 uid="uid://2t1gcgrhhbkp"]

[ext_resource type="Script" uid="uid://bwllxup305eib" path="res://scenes/game_elements/characters/player/components/player.gd" id="1_7ch3g"]
[ext_resource type="SpriteFrames" uid="uid://b6ijk8vi5x3tv" path="res://scenes/quests/story_quests/somnus/player_components/somnus_player.tres" id="2_qm6c0"]
[ext_resource type="Script" uid="uid://qro4uo83ba8f" path="res://scenes/game_elements/characters/player/components/player_sprite.gd" id="3_787mr"]
[ext_resource type="Script" uid="uid://bpu6jo4kvehlg" path="res://scenes/game_elements/characters/player/components/player_interaction.gd" id="4_kux24"]
[ext_resource type="Script" uid="uid://necvar42rnih" path="res://scenes/game_elements/characters/player/components/interact_zone.gd" id="5_u16gp"]
[ext_resource type="PackedScene" uid="uid://yfpfno276rol" path="res://scenes/game_elements/props/fixed_size_label/fixed_size_label.tscn" id="6_s0s5x"]
[ext_resource type="Script" uid="uid://kni2yl26matc" path="res://scenes/game_elements/characters/player/components/player_fighting.gd" id="7_ccnt0"]
[ext_resource type="Texture2D" uid="uid://dda0lxfswrncy" path="res://scenes/game_elements/characters/player/components/blow.png" id="8_d2m0x"]
[ext_resource type="Script" uid="uid://b7704hdflt5t8" path="res://scenes/game_elements/characters/player/components/player_hook.gd" id="9_uomoc"]
[ext_resource type="PackedScene" uid="uid://b0dehcnfo68j1" path="res://scenes/game_elements/props/hook_control/hook_control.tscn" id="10_l48ap"]
[ext_resource type="AudioStream" uid="uid://crfylo055wa8e" path="res://scenes/game_elements/characters/player/components/blow.wav" id="11_8x5u4"]
[ext_resource type="Script" uid="uid://e78f8iq448e1" path="res://scenes/game_elements/characters/player/components/animation_player.gd" id="12_7pipm"]
[ext_resource type="AudioStream" uid="uid://cx6jv2cflrmqu" path="res://assets/third_party/sounds/characters/player/Foot.ogg" id="13_q0ibe"]
[ext_resource type="Script" uid="uid://bnbt0iw1a1w6" path="res://scenes/game_elements/characters/enemies/guard/components/detection_area.gd" id="14_meenn"]
[ext_resource type="Texture2D" uid="uid://8t6ihmesvghq" path="res://scenes/game_elements/characters/enemies/guard/components/field_of_view.png" id="15_0gk0g"]
[ext_resource type="Script" uid="uid://cxsi2xqcdyw7g" path="res://scenes/game_elements/characters/enemies/guard/components/light.gd" id="16_er3kq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_je7p5"]
size = Vector2(18, 29)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3vyb7"]
radius = 0.7929182
height = 12.036773

[sub_resource type="RectangleShape2D" id="RectangleShape2D_blfj0"]
size = Vector2(49, 49)

[sub_resource type="CircleShape2D" id="CircleShape2D_h17s1"]
radius = 20.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_je7p5"]
blend_mode = 1

[sub_resource type="Animation" id="Animation_wvgcx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PlayerSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4ypcv"]
resource_name = "got_hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PlayerSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1n58k"]
_data = {
&"RESET": SubResource("Animation_wvgcx"),
&"got_hit": SubResource("Animation_4ypcv")
}

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_75vfm"]
closed = false
cull_mode = 1
polygon = PackedVector2Array(7, 7, 24, -20, 14, -49, -3, -74, -17, -61, -17, -42, -31, -42, -27, -8, 6, 7)

[sub_resource type="Animation" id="Animation_0owmy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerFighting/AirStream/AirStreamCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerFighting/AirStream/AirStreamCollision:shape:radius")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [20.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerFighting/AirStream:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerFighting/AirStream/Sprite2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PlayerFighting/AirStream/Sprite2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.12577, 0.12577)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PlayerFighting/AirStream/Sprite2D:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_blfj0"]
resource_name = "defeated"
length = 1.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"defeated"]
}

[sub_resource type="Animation" id="Animation_75vfm"]
resource_name = "idle"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_u5klv"]
resource_name = "repel"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerFighting/AirStream/AirStreamCollision:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 0, 0, 1, 2, 3, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"attack_02"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerFighting/AirStream/AirStreamCollision:shape:radius")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [20.0, 150.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerFighting/AirStream:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerFighting/AirStream/Sprite2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PlayerFighting/AirStream/Sprite2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.12577, 0.12577), Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PlayerFighting/AirStream/Sprite2D:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.3, 0.5, 0.6),
"transitions": PackedFloat32Array(2, 0.5, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.456), Color(1, 1, 1, 0)]
}
tracks/8/type = "audio"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PlayerFighting/AirStream/AudioStreamPlayer2D")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("11_8x5u4")
}],
"times": PackedFloat32Array(0.3)
}
tracks/8/use_blend = true

[sub_resource type="Animation" id="Animation_nrnyj"]
resource_name = "run"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"run"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WalkSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, true]
}

[sub_resource type="Animation" id="Animation_4nivu"]
resource_name = "throw_string"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"attack_01"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 3]
}

[sub_resource type="Animation" id="Animation_qek5x"]
resource_name = "walk"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"walk"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WalkSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.115043, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qek5x"]
_data = {
&"RESET": SubResource("Animation_0owmy"),
&"defeated": SubResource("Animation_blfj0"),
&"idle": SubResource("Animation_75vfm"),
&"repel": SubResource("Animation_u5klv"),
&"run": SubResource("Animation_nrnyj"),
&"throw_string": SubResource("Animation_4nivu"),
&"walk": SubResource("Animation_qek5x")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(2.492171, 2.522137)
collision_mask = 531
motion_mode = 1
wall_min_slide_angle = 0.017453292
script = ExtResource("1_7ch3g")
sprite_frames = ExtResource("2_qm6c0")

[node name="HitBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 64
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-1, -19.5)
shape = SubResource("RectangleShape2D_je7p5")
debug_color = Color(0.94902, 0.231373, 0, 0.419608)

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -17)
sprite_frames = ExtResource("2_qm6c0")
animation = &"idle"
autoplay = "idle"
script = ExtResource("3_787mr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.9802322e-08, -11.894676)
rotation = -4.7247844
shape = SubResource("CapsuleShape2D_3vyb7")

[node name="PlayerInteraction" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("4_kux24")

[node name="InteractZone" type="Area2D" parent="PlayerInteraction" node_paths=PackedStringArray("character")]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 32
script = ExtResource("5_u16gp")
character = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerInteraction/InteractZone"]
position = Vector2(16.5, -14.5)
shape = SubResource("RectangleShape2D_blfj0")
debug_color = Color(0.600391, 0.54335, 0, 0.42)

[node name="InteractMarker" type="Marker2D" parent="PlayerInteraction"]
unique_name_in_owner = true
position = Vector2(-1, -116)

[node name="InteractLabel" parent="PlayerInteraction/InteractMarker" instance=ExtResource("6_s0s5x")]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 11.0
offset_right = 1.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerFighting" type="Node2D" parent="."]
unique_name_in_owner = true
process_mode = 4
visible = false
script = ExtResource("7_ccnt0")

[node name="AirStream" type="Area2D" parent="PlayerFighting"]
unique_name_in_owner = true
position = Vector2(0, -24)
collision_layer = 0
collision_mask = 256

[node name="AirStreamCollision" type="CollisionShape2D" parent="PlayerFighting/AirStream"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_h17s1")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="PlayerFighting/AirStream"]
visible = false
material = SubResource("CanvasItemMaterial_je7p5")
scale = Vector2(0.12577, 0.12577)
texture = ExtResource("8_d2m0x")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PlayerFighting/AirStream"]

[node name="GotHitAnimation" type="AnimationPlayer" parent="PlayerFighting"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_1n58k")
}

[node name="PlayerHook" type="Node2D" parent="." groups=["hook_listener"]]
unique_name_in_owner = true
process_mode = 4
visible = false
position = Vector2(0, -20)
script = ExtResource("9_uomoc")

[node name="HookControl" parent="PlayerHook" instance=ExtResource("10_l48ap")]
state = 1

[node name="HookEnding" type="Marker2D" parent="PlayerHook"]

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource("OccluderPolygon2D_75vfm")
sdf_collision = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_qek5x")
}
script = ExtResource("12_7pipm")

[node name="WalkSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("13_q0ibe")
volume_db = -5.0
pitch_scale = 7.0
bus = &"SFX"

[node name="PointLight2D" type="PointLight2D" parent="."]

[node name="DetectionArea" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -19)
collision_layer = 0
script = ExtResource("14_meenn")

[node name="Light" type="PointLight2D" parent="DetectionArea"]
position = Vector2(1.6050258, 1.5544758)
scale = Vector2(0.097204514, 0.0883854)
color = Color(1, 1, 0.796078, 1)
blend_mode = 2
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 0.5
texture = ExtResource("15_0gk0g")
offset = Vector2(377.88, 10.7686)
script = ExtResource("16_er3kq")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectionArea"]
position = Vector2(-10.833928, -31.750614)
scale = Vector2(0.2665037, 0.23814517)
polygon = PackedVector2Array(302, 48, 283, 52, 279, 52, 101, 114, 98, 114, 79, 124, 77, 124, 72, 131, 71, 131, 71, 138, 78, 145, 78, 146, 95, 154, 95, 155, 275, 226, 275, 227, 292, 231, 292, 232, 312, 230, 316, 230, 330, 222, 332, 222, 340, 214, 341, 214, 346, 205, 347, 205, 351, 185, 351, 100, 347, 82, 347, 79, 338, 67, 338, 65, 325, 55, 325, 54, 302, 47)
